fix statusbar messages that are not showing [#56]

--- a/dc_matchbox/media/styles/matchbox.css
+++ b/dc_matchbox/media/styles/matchbox.css
@@ -62,6 +62,7 @@ body div#statusbar {
     -webkit-border-radius: 0 0 10px 10px;
 }
 body div#statusbar p { margin: 0; padding: 0; }
+body div#statusbar.error { background-color: #900; border: 1px solid #900; }
 
 #main { font-size: 93%; margin-bottom: 22em; }
 #content { float: left; width: 750px; margin: 0 0 200px 0; }
